# XGPL

./: CMakeLists.txt  README.md
evaluation_board_manager/: CMakeLists.txt  evaluation_board_manager.cpp  evaluation_board_manager.h  main.cpp
gpl/: CMakeLists.txt
gpl/include/: application.h  console.h  console_linux.h  console_win.h  file_handler.h  gpl.h  logger.h  master_console.h  network.h  parser.h  process_handler.h  process_handler_win.h  publisher.h  serial_port_win.h  slave_console.h  socket_win.h
gpl/src/: application.cpp  console.cpp  file_handler.cpp  logger.cpp  master_console.cpp  network.cpp  process_handler.cpp  process_handler_win.cpp  publisher.cpp  serial_port_win.cpp  slave_console.cpp  socket_win.cpp
slave_prompt/: CMakeLists.txt  main.cpp  slave_prompt.cpp  slave_prompt.h
test_app/: CMakeLists.txt  main.cpp  test_app.cpp  test_app.h
